k8s/quarkus/code-with-quarkus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: code-with-quarkus-deployment
 namespace: quarkus
 labels:
  app: code-with-quarkus
spec:
 replicas: 1
 selector:
  matchLabels:
   app: code-with-quarkus
 template:
  metadata:
   name: code-with-quarkus
   labels:
    app: code-with-quarkus
  spec:
   containers:
    - name: code-with-quarkus
      image: quarkus/code-with-quarkus-jvm:latest
      ports:
       - containerPort: 8080
      imagePullPolicy: IfNotPresent
   restartPolicy: Always
