k8s/quarkus/code-with-quarkus-external-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: code-with-quarkus
spec:
 selector:
  app: code-with-quarkus
 type: LoadBalancer
 ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30000
