k8s/quarkus/code-with-quarkus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-with-quarkus-service
  namespace: quarkus
spec:
  selector:
    app: code-with-quarkus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
