k8s/quarkus/code-with-quarkus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-with-quarkus-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: my-app.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: code-with-quarkus-service
                port:
                  number: 8080
